--- a/jazzmin/static/jazzmin/css/main.css
+++ b/jazzmin/static/jazzmin/css/main.css
@@ -15,40 +15,40 @@ div.inline-related {
 
 
 /** Fix bug of adminLTE, since django is using th headers in middle of table **/
-.card-body.p-0 .table thead > tr > th:first-of-type,
-.card-body.p-0 .table thead > tr > td:first-of-type,
-.card-body.p-0 .table tfoot > tr > th:first-of-type,
-.card-body.p-0 .table tfoot > tr > td:first-of-type,
-.card-body.p-0 .table tbody > tr > th:first-of-type,
-.card-body.p-0 .table tbody > tr > td:first-of-type {
-  padding-left: 0.75rem;
+.card-body.p-0 .table thead>tr>th:first-of-type,
+.card-body.p-0 .table thead>tr>td:first-of-type,
+.card-body.p-0 .table tfoot>tr>th:first-of-type,
+.card-body.p-0 .table tfoot>tr>td:first-of-type,
+.card-body.p-0 .table tbody>tr>th:first-of-type,
+.card-body.p-0 .table tbody>tr>td:first-of-type {
+    padding-left: 0.75rem;
 }
 
-.card-body.p-0 .table thead > tr > th:last-of-type,
-.card-body.p-0 .table thead > tr > td:last-of-type,
-.card-body.p-0 .table tfoot > tr > th:last-of-type,
-.card-body.p-0 .table tfoot > tr > td:last-of-type,
-.card-body.p-0 .table tbody > tr > th:last-of-type,
-.card-body.p-0 .table tbody > tr > td:last-of-type {
-  padding-right: 0.75rem;
+.card-body.p-0 .table thead>tr>th:last-of-type,
+.card-body.p-0 .table thead>tr>td:last-of-type,
+.card-body.p-0 .table tfoot>tr>th:last-of-type,
+.card-body.p-0 .table tfoot>tr>td:last-of-type,
+.card-body.p-0 .table tbody>tr>th:last-of-type,
+.card-body.p-0 .table tbody>tr>td:last-of-type {
+    padding-right: 0.75rem;
 }
 
-.card-body.p-0 .table thead > tr > th:first-child,
-.card-body.p-0 .table thead > tr > td:first-child,
-.card-body.p-0 .table tfoot > tr > th:first-child,
-.card-body.p-0 .table tfoot > tr > td:first-child,
-.card-body.p-0 .table tbody > tr > th:first-child,
-.card-body.p-0 .table tbody > tr > td:first-child {
-  padding-left: 1.5rem;
+.card-body.p-0 .table thead>tr>th:first-child,
+.card-body.p-0 .table thead>tr>td:first-child,
+.card-body.p-0 .table tfoot>tr>th:first-child,
+.card-body.p-0 .table tfoot>tr>td:first-child,
+.card-body.p-0 .table tbody>tr>th:first-child,
+.card-body.p-0 .table tbody>tr>td:first-child {
+    padding-left: 1.5rem;
 }
 
-.card-body.p-0 .table thead > tr > th:last-child,
-.card-body.p-0 .table thead > tr > td:last-child,
-.card-body.p-0 .table tfoot > tr > th:last-child,
-.card-body.p-0 .table tfoot > tr > td:last-child,
-.card-body.p-0 .table tbody > tr > th:last-child,
-.card-body.p-0 .table tbody > tr > td:last-child {
-  padding-right: 1.5rem;
+.card-body.p-0 .table thead>tr>th:last-child,
+.card-body.p-0 .table thead>tr>td:last-child,
+.card-body.p-0 .table tfoot>tr>th:last-child,
+.card-body.p-0 .table tfoot>tr>td:last-child,
+.card-body.p-0 .table tbody>tr>th:last-child,
+.card-body.p-0 .table tbody>tr>td:last-child {
+    padding-right: 1.5rem;
 }
 
 
@@ -208,7 +208,8 @@ table.dataTable thead .sorting_desc_disabled::after {
 .field-identifier input[type="text"],
 .field-generic_ip_address input[type="text"],
 .field-null_boolean select,
-.field-file_path select {
+.field-file_path select,
+input[type="number"] {
     height: calc(2.25rem + 2px);
     padding: .375rem .75rem;
     font-size: 1rem;
@@ -536,7 +537,7 @@ table.dataTable thead .sorting_desc_disabled::after {
     padding: 0 10px;
     margin: 0 0 10px;
     /*border-radius: 0 0 4px 4px;*/
-;
+    ;
 }
 
 .selector-add,
@@ -812,6 +813,7 @@ a.inline-deletelink {
     border: 1px solid #dc3545;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+
 /* end stacked inlines */
 
 /* Support for django-mptt */
@@ -822,6 +824,7 @@ a.inline-deletelink {
 #result_list .field-tree_actions>div {
     margin-top: 0;
 }
+
 /* End support for django-mptt */
 
 /* modal tweaks */
@@ -847,6 +850,7 @@ iframe.related-iframe {
     -ms-filter: blur(1px);
     filter: blur(1px);
 }
+
 /* end modal tweaks */
 
 .control-sidebar {
@@ -865,6 +869,7 @@ body.jazzmin-login-page {
     -ms-flex-pack: center;
     justify-content: center;
 }
+
 .callout {
     color: black;
 }
@@ -878,23 +883,28 @@ body.jazzmin-login-page {
     /* May inherit scroll, so we need to explicitly hide */
     overflow-x: hidden;
 }
+
 /* calculate height to fit content, we don't to enable scrolling if the content fits */
 .layout-fixed #jazzy-sidebar .sidebar {
     height: auto !important;
 }
+
 /* Hide scrollbar */
 .layout-fixed #jazzy-sidebar {
     scrollbar-width: none;
 }
+
 .layout-fixed #jazzy-sidebar::-webkit-scrollbar {
     width: 0;
 }
+
 /* nav-item will overflow container in width if scrollbar is visible */
-#jazzy-sidebar .nav-sidebar > .nav-item {
+#jazzy-sidebar .nav-sidebar>.nav-item {
     width: 100%;
 }
+
 /* tweeks for django-filer*/
-.navigator-top-nav + #content-main {
+.navigator-top-nav+#content-main {
     float: left;
     width: 100%;
 }
