--- a/static/assets/std_portal/css/style.scss
+++ b/static/assets/std_portal/css/style.scss
@@ -143,6 +143,7 @@ aside {
 				aspect-ratio: 1/1;
 				margin: 0 auto 20px auto;
 				border-radius: 50%;
+				object-fit: cover;
 			}
 
 			.name {
@@ -287,7 +288,7 @@ main {
 	transition: 1s transform cubic-bezier(.23, 1, .32, 1);
 
 	.show-sidebar & {
-		transform: translateX(300px);
+		transform: translateX(150px);
 	}
 
 	.post-entry {
