--- a/std_portal/templates/std_portal/result.html
+++ b/std_portal/templates/std_portal/result.html
@@ -15,19 +15,23 @@
                     <th>Course Code</th>
                     <th>Course Name</th>
                     <th>Credit Hour</th>
-                    <th>Grade Letter</th>
                     <th>Grade Point</th>
+                    <th>Grade Letter</th>
+                    <th>Enroll Year</th>
+                    <th>Enroll Semester</th>
                 </tr>
             </thead>
             <tbody>
                 {% for obj in resultobjs %}
                 <tr>
                     <td>{{ forloop.counter }}</td>
-                    <td>{{obj.course.course_code}}</td>
-                    <td>{{obj.course.course_name}}</td>
-                    <td>{{obj.course.course_credit}}</td>
+                    <td>{{obj.enroll_course.course.course_code}}</td>
+                    <td>{{obj.enroll_course.course.course_name}}</td>
+                    <td>{{obj.enroll_course.course.course_credit}}</td>
                     <td>{{obj.grade_point}}</td>
                     <td>{{obj.grade_letter}}</td>
+                    <td>{{obj.enroll_course.enroll_year}}</td>
+                    <td>{{obj.enroll_course.enroll_semester}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -37,8 +41,63 @@
                     <th>Course Code</th>
                     <th>Course Name</th>
                     <th>Credit Hour</th>
-                    <th>Grade Letter</th>
                     <th>Grade Point</th>
+                    <th>Grade Letter</th>
+                    <th>Enroll Year</th>
+                    <th>Enroll Semester</th>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    <div class="col-md-12">
+        <div class="export">
+            <span>Export: </span>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-md-12 mb-3">
+        <h2>Retake Information</h2>
+    </div>
+    <div class="col-md-12 table-responsive">
+        <table id="example" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>S. No</th>
+                    <th>Course Code</th>
+                    <th>Course Name</th>
+                    <th>Credit Hour</th>
+                    <th>Grade Point</th>
+                    <th>Grade Letter</th>
+                    <th>Enroll Year</th>
+                    <th>Enroll Semester</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for obj in retakeobjs %}
+                <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{obj.enroll_course.course.course_code}}</td>
+                    <td>{{obj.enroll_course.course.course_name}}</td>
+                    <td>{{obj.enroll_course.course.course_credit}}</td>
+                    <td>{{obj.grade_point}}</td>
+                    <td>{{obj.grade_letter}}</td>
+                    <td>{{obj.enroll_course.enroll_year}}</td>
+                    <td>{{obj.enroll_course.enroll_semester}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>S. No</th>
+                    <th>Course Code</th>
+                    <th>Course Name</th>
+                    <th>Credit Hour</th>
+                    <th>Grade Point</th>
+                    <th>Grade Letter</th>
+                    <th>Enroll Year</th>
+                    <th>Enroll Semester</th>
                 </tr>
             </tfoot>
         </table>
